Adição de Feedback

--- a/certificados.html
+++ b/certificados.html
@@ -85,7 +85,7 @@
               <img class="" src="assets/images/page-titles/certificados.png">
             </div>
             <h1 class="pagetitle__heading">Certificados</h1>
-            <p class="pagetitle__desc mb-30">O único laboratório do Rio Grande do Norte certificado pelo Sistema
+            <p class="pagetitle__desc mb-30">O primeiro laboratório do Rio Grande do Norte certificado pelo Sistema
               Nacional de Acreditação da Sociedade Brasileira de Análises Clínicas.
             </p>
             <a href="#content" class="scroll-down"><i class="fas fa-long-arrow-alt-down"></i></a>
@@ -117,7 +117,7 @@
                   <img src="assets/images/certificados/PNCQ.png" alt="certificado img">
                 </div><!-- /.cert-img -->
                 <div class="member__info">
-                  <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial (2020)</a></h5>
+                  <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial</a></h5>
                   <p class="member__job">Categoria Diamante</p>
                   <p class="member__desc">Certificado concedido pelo Programa Nacional de Controle de Qualidade (PNCQ)
                     aos laboratórios que tiveram 20 anos de excelente desempenho.
@@ -130,10 +130,10 @@
                   <img src="assets/images/certificados/DICQ.png" alt="certificado img">
                 </div><!-- /.member-img -->
                 <div class="member__info">
-                  <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial (2022)</a></h5>
-                  <p class="member__job">Categoria Diamante</p>
-                  <p class="member__desc">Certificado concedido pelo Programa Nacional de Controle de Qualidade (PNCQ)
-                    aos laboratórios que tiveram 20 anos de excelente desempenho.</p>
+                  <h5 class="member__name"><a href="certificados.html">DICQ</a></h5>
+                  <p class="member__job">Sistema Nacional de Acreditação</p>
+                  <p class="member__desc">Pioneiros no RN com certificado pelo Sistema Nacional de Acreditação da
+                    Sociedade Brasileira de Análises Clínicas.</p>
                 </div><!-- /.cert-info -->
               </div><!-- /.Certificado 3 -->
             </div><!-- /.carousel -->
