--- a/index.html
+++ b/index.html
@@ -249,8 +249,7 @@
         <div class="col-sm-12 col-md-12 col-lg-6">
           <div class="heading-layout1 heading-light mb-60">
             <h3 class="heading__title">Nossas unidades</h3>
-            <p class="heading__desc">We provide all aspects of medical practice for your whole family, including
-              general check-ups or assisting you with specific injuries.</p>
+            <p class="heading__desc">Tem sempre um Hemolab perto de você!</p>
           </div><!-- /.heading -->
         </div><!-- /.col-lg-6 -->
       </div><!-- /.row -->
@@ -595,7 +594,7 @@
                 <img src="assets/images/certificados/PNCQ.png" alt="certificado img">
               </div><!-- /.cert-img -->
               <div class="member__info">
-                <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial (2020)</a></h5>
+                <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial</a></h5>
                 <p class="member__job">Categoria Diamante</p>
                 <p class="member__desc">Certificado concedido pelo Programa Nacional de Controle de Qualidade (PNCQ)
                   aos laboratórios que tiveram 20 anos de excelente desempenho.
@@ -603,18 +602,19 @@
               </div><!-- /.cert-info -->
             </div><!-- /.Certificado 1 -->
 
-            <!-- Certificado 3 -->
+            <!-- Certificado 2 -->
             <div class="member">
               <div class="member__img">
                 <img src="assets/images/certificados/DICQ.png" alt="certificado img">
               </div><!-- /.member-img -->
               <div class="member__info">
-                <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial (2022)</a></h5>
-                <p class="member__job">Categoria Diamante</p>
-                <p class="member__desc">Certificado concedido pelo Programa Nacional de Controle de Qualidade (PNCQ)
-                  aos laboratórios que tiveram 20 anos de excelente desempenho.</p>
+                <h5 class="member__name"><a href="certificados.html">DICQ</a></h5>
+                <p class="member__job">Sistema Nacional de Acreditação</p>
+                <p class="member__desc">Pioneiros no RN com certificado pelo Sistema Nacional de Acreditação da
+                  Sociedade Brasileira de Análises Clínicas.
+                </p>
               </div><!-- /.cert-info -->
-            </div><!-- /.Certificado 3 -->
+            </div><!-- /.Certificado 1 -->
           </div><!-- /.carousel -->
         </div><!-- /.col-12 -->
         <div class="btn btn__primary btn__rounded mt-50 mr-auto ml-auto">
@@ -645,26 +645,23 @@
                   <img src="assets/images/testimonials/thumbs/1.png" alt="author thumb">
                 </div><!-- /.testimonial-thumb -->
                 <div>
-                  <h4 class="testimonial__meta-title">Sami Wade</h4>
-                  <p class="testimonial__meta-desc">7oroof Inc</p>
+                  <h4 class="testimonial__meta-title">Riedja Porto</h4>
                 </div>
               </div><!-- /.testimonial-meta -->
               <div class="testimonial__meta">
                 <div class="testimonial__thmb">
-                  <img src="assets/images/testimonials/thumbs/2.png" alt="author thumb">
+                  <img src="assets/images/testimonials/thumbs/2.jpg" alt="author thumb">
                 </div><!-- /.testimonial-thumb -->
                 <div>
-                  <h4 class="testimonial__meta-title">Ahmed</h4>
-                  <p class="testimonial__meta-desc">Web Inc</p>
+                  <h4 class="testimonial__meta-title">Juliana Schivan</h4>
                 </div>
               </div><!-- /.testimonial-meta -->
               <div class="testimonial__meta">
                 <div class="testimonial__thmb">
-                  <img src="assets/images/testimonials/thumbs/3.png" alt="author thumb">
+                  <img src="assets/images/testimonials/thumbs/3.jpg" alt="author thumb">
                 </div><!-- /.testimonial-thumb -->
                 <div>
-                  <h4 class="testimonial__meta-title">Sonia Blake</h4>
-                  <p class="testimonial__meta-desc">Web Inc</p>
+                  <h4 class="testimonial__meta-title">Lidiane Freitas</h4>
                 </div>
               </div><!-- /.testimonial-meta -->
             </div><!-- /.slider-nav -->
@@ -673,26 +670,21 @@
             <div class="slider-with-navs">
               <!-- Testimonial #1 -->
               <div class="testimonial-item">
-                <h3 class="testimonial__title">“Their doctors include highly qualified practitioners who come from a
-                  range of backgrounds and bring with them a diversity of skills and special interests. They also have
-                  registered nurses on staff who are available to triage any urgent matters, and the administration
-                  and support staff all have exceptional people skills”
+                <h3 class="testimonial__title">“Apesar de sempre muito movimentado, o atendimento é rápido. A equipe
+                  muito atenciosa e cordial.”
                 </h3>
               </div><!-- /. testimonial-item -->
               <!-- Testimonial #2 -->
               <div class="testimonial-item">
-                <h3 class="testimonial__title">“Their doctors include highly qualified practitioners who come from a
-                  range of backgrounds and bring with them a diversity of skills and special interests. They also have
-                  registered nurses on staff who are available to triage any urgent matters, and the administration
-                  and support staff all have exceptional people skills”
+                <h3 class="testimonial__title">“Super recomendo. Muito organizado, atendimento super rápido, pega o
+                  resultado pela internet e saí muito rápido e com o histórico dos resultados de exames anteriores.”
                 </h3>
               </div><!-- /. testimonial-item -->
               <!-- Testimonial #3 -->
               <div class="testimonial-item">
-                <h3 class="testimonial__title">“Their doctors include highly qualified practitioners who come from a
-                  range of backgrounds and bring with them a diversity of skills and special interests. They also have
-                  registered nurses on staff who are available to triage any urgent matters, and the administration
-                  and support staff all have exceptional people skills”
+                <h3 class="testimonial__title">“Quero dizer que fui muito bem atendida, desde a recepção até a coleta,
+                  muito simpática e cuidadosa, mãos de fada, não senti dor e foi super agradável.....Fiquei muito feliz
+                  e voltei para casa satisfeita. Obrigada....Gratidão!!!!!”
                 </h3>
               </div><!-- /. testimonial-item -->
             </div><!-- /.slick-carousel -->
