--- a/quem-somos.html
+++ b/quem-somos.html
@@ -179,9 +179,7 @@
                       </div><!-- /.accordion-item-header -->
                       <div id="collapse3" class="collapse" data-parent="#accordion">
                         <div class="accordion__body">
-                          <p>With any financial product that you buy, it is important that you know you are getting
-                            the best
-                            advice from a reputable company as often</p>
+                          <p>Exames laboratoriais, como exames de sangue, fezes e urina.</p>
                         </div><!-- /.accordion-item-body -->
                       </div>
                     </div><!-- /.accordion-item -->
@@ -192,22 +190,20 @@
                       </div><!-- /.accordion-item-header -->
                       <div id="collapse2" class="collapse" data-parent="#accordion">
                         <div class="accordion__body">
-                          <p>With any financial product that you buy, it is important that you know you are getting
-                            the best
-                            advice from a reputable company as often</p>
+                          <p>Cada unidade possui o seu horário de funcionamento, é necessário verificar qual a sua
+                            unidade de preferência com o nosso call center, pelo telefone ou whatsapp.</p>
                         </div><!-- /.accordion-item-body -->
                       </div>
                     </div><!-- /.accordion-item -->
                     <div class="accordion-item">
                       <div class="accordion__header" data-toggle="collapse" data-target="#collapse1"
                         aria-expanded="true">
-                        <a class="accordion__title" href="#">Saída de resultados</a>
+                        <a class="accordion__title" href="#">Preciso fazer o exame de jejum?</a>
                       </div><!-- /.accordion-item-header -->
                       <div id="collapse1" class="collapse" data-parent="#accordion">
                         <div class="accordion__body">
-                          <p>With any financial product that you buy, it is important that you know you are getting
-                            the best
-                            advice from a reputable company as often</p>
+                          <p>Não são todos os exames que o jejum é obrigatório, é necessário verificar qual o seu exame
+                            e se o Hemolab indica ou não ou se possui indicação médica.</p>
                         </div><!-- /.accordion-item-body -->
                       </div>
                     </div><!-- /.col-lg-8 -->
