--- a/unidades.html
+++ b/unidades.html
@@ -85,9 +85,7 @@
               <img class="mt--20 w-65" src="assets/images/page-titles/unidades.png">
             </div>
             <h1 class="pagetitle__heading">Unidades</h1>
-            <p class="pagetitle__desc mb-30">Encontre aqui o Hemolab mais próximo de você Encontre aqui o Hemolab mais
-              próximo de você Encontre aqui o Hemolab mais próximo de você Encontre aqui o Hemolab mais próximo de você.
-              Encontre aqui o Hemolab mais próximo de você
+            <p class="pagetitle__desc mb-30">Encontre aqui o Hemolab mais próximo de você.
             </p>
             <a href="#content" class="scroll-down"><i class="fas fa-long-arrow-alt-down"></i></a>
           </div><!-- /.col-xl-8 -->
