Alterações (quase) finais

--- a/certificados.html
+++ b/certificados.html
@@ -114,7 +114,7 @@
               <!-- Certificado 1 -->
               <div class="member">
                 <div class="member__img">
-                  <img src="assets/images/certificados/PNCQ.png" alt="certificado img">
+                  <img src="assets/images/certificados/PNCQ2.png" alt="certificado img">
                 </div><!-- /.cert-img -->
                 <div class="member__info">
                   <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial</a></h5>
@@ -124,10 +124,10 @@
                   </p>
                 </div><!-- /.cert-info -->
               </div><!-- /.Certificado 1 -->
-              <!-- Certificado 3 -->
+              <!-- Certificado 2 -->
               <div class="member">
                 <div class="member__img">
-                  <img src="assets/images/certificados/DICQ.png" alt="certificado img">
+                  <img src="assets/images/certificados/DICQ2.png" alt="certificado img">
                 </div><!-- /.member-img -->
                 <div class="member__info">
                   <h5 class="member__name"><a href="certificados.html">DICQ</a></h5>
@@ -135,7 +135,7 @@
                   <p class="member__desc">Pioneiros no RN com certificado pelo Sistema Nacional de Acreditação da
                     Sociedade Brasileira de Análises Clínicas.</p>
                 </div><!-- /.cert-info -->
-              </div><!-- /.Certificado 3 -->
+              </div><!-- /.Certificado 2 -->
             </div><!-- /.carousel -->
           </div><!-- /.col-12 -->
         </div><!-- /.row -->
@@ -165,8 +165,8 @@
             <div class="col-sm-12 col-md-12 col-lg-12">
               <ul class="social-icons list-unstyled">
                 <li><a href="tel:558436165000"><i class="fa-solid fa-phone"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://www.instagram.com/hemolab_rn/"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/hemolabrn"><i class="fab fa-facebook-f"></i></a></li>
               </ul><!-- /.social-icons -->
             </div>
           </div><!-- /.row -->
