--- a/quem-somos.html
+++ b/quem-somos.html
@@ -86,8 +86,7 @@
             </div>
             <h1 class="pagetitle__heading">Quem Somos</h1>
             <p class="pagetitle__desc mb-30">Desde 08 de maio de 1992, o Hemolab atua com excelência no auxílio de
-              diagnóstico na Medicina do Rio Grande do Norte. Fundamentado em princípios éticos que refletem em uma
-              administração voltada à inovação, alta tecnologia, transparência e qualificação profissional.
+              diagnóstico na Medicina do Rio Grande do Norte.
             </p>
             <a href="#content" class="scroll-down"><i class="fas fa-long-arrow-alt-down"></i></a>
           </div><!-- /.col-xl-8 -->
@@ -103,17 +102,17 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
             <div class="heading text-center mb-60">
-              <h2 class="heading__subtitle">Confiabilidade e experiência</h2>
-              <h3 class="heading__title">Confira os principais exames que ofertamos</h3>
+              <h2 class="heading__subtitle">Confiança e Qualidade</h2>
+              <h3 class="heading__title">Mais de 30 anos de experiência...</h3>
             </div><!-- /.heading -->
           </div><!-- /.col-lg-6 -->
         </div>
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-8">
             <div class="about__Text">
-              <p class="mb-30">Our goal is to deliver quality of care in a courteous, respectful, and compassionate
-                manner. We hope you will allow us to care for you and to be the first and best choice for healthcare. We
-                hope you will allow us to care for you and to be the first and best choice for healthcare.
+              <p class="mb-30">O foco do Hemolab é buscar continuamente o nosso aperfeiçoamento, para que nossos
+                pacientes obtenham os seus resultados confiáveis em tempo hábil e proporcionando um elevado padrão de
+                atendimento, assim nos tornando sinônimo de confiança e qualidade!
               </p>
             </div>
             <div class="video-banner">
@@ -124,12 +123,11 @@
               </iframe>
             </div><!-- /.video-banner -->
             <div class="about__Text2 mt-30 mb-50">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim, quos. Facilis, et! Delectus, aliquam
-                explicabo repudiandae ea, nisi nesciunt, dignissimos officiis voluptatem ullam reprehenderit ipsa
-                exercitationem quisquam nobis dolorem suscipit.</p>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim, quos. Facilis, et! Delectus, aliquam
-                explicabo repudiandae ea, nisi nesciunt, dignissimos officiis voluptatem ullam reprehenderit ipsa
-                exercitationem quisquam nobis dolorem suscipit.</p>
+              <p>Desde 1992, o Hemolab - Laboratório de Análises Clínicas - exerce no Rio Grande do Norte um relevante
+                papel de auxílio no diagnóstico na Medicina do Rio Grande do Norte, sempre pautado em princípios éticos
+                e composto por uma equipe de profissionais comprovadamente capacitados.</p>
+              <p>Fundamentado em princípios éticos que refletem em uma administração voltada à inovação, alta
+                tecnologia, transparência e qualificação profissional.</p>
             </div>
           </div><!-- /.col-lg-6 -->
           <div class="col-sm-12 col-md-12 col-lg-4">
@@ -139,8 +137,8 @@
                   <div>
                     <h5>Nossos diferenciais</h5>
                   </div>
-                  <p class="widget__desc">Please feel welcome to contact our friendly reception staff with any general
-                    or medical enquiry call us.
+                  <p class="widget__desc">Nossa política de qualidade é buscar continuamente o aperfeiçoamento desse
+                    processo para fazermos do Hemolab sinônimo de confiança e qualidade.
                   </p>
                   <ul class="list-items list-items-layout2 list-unstyled mb-10">
                     <li><span class="fa-li ml-4"><i class="fa-solid fa-circle-check color-primary"></i></span>Qualidade
@@ -168,8 +166,7 @@
                   <div>
                     <h5>Dúvidas frequentes</h5>
                   </div>
-                  <p class="widget__desc">Please feel welcome to contact our friendly reception staff with any general
-                    or medical enquiry call us.
+                  <p class="widget__desc">Para outras dúvidas, entre em contato conosco.
                   </p>
                   <div id="accordion">
                     <div class="accordion-item">
@@ -239,8 +236,8 @@
             <div class="col-sm-12 col-md-12 col-lg-12">
               <ul class="social-icons list-unstyled">
                 <li><a href="tel:558436165000"><i class="fa-solid fa-phone"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://www.instagram.com/hemolab_rn/"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/hemolabrn"><i class="fab fa-facebook-f"></i></a></li>
               </ul><!-- /.social-icons -->
             </div>
           </div><!-- /.row -->
