--- a/servicos.html
+++ b/servicos.html
@@ -85,10 +85,10 @@
               <img class="" src="assets/images/page-titles/servicos.png">
             </div>
             <h1 class="pagetitle__heading">Serviços</h1>
-            <p class="pagetitle__desc mb-30">O Hemolab dispõe de serviços de diagnose nas mais diversas áreas como
-              biologia molecular, citogenética, teste de paternidade, exames de DNA, sexagem fetal, morfologia de medula
-              óssea, painéis genômicos, análises clínicas com recursos e equipamentos de ponta, entre outros
-              procedimentos.
+            <p class="pagetitle__desc mb-30">O Hemolab, dispõe de serviços de diagnose nas mais diversas áreas como
+              biologia molecular, hematologia, imuno-hematologia, citometria de fluxo, bioquímica, imunologia,
+              hormônios, urinálises, parasitologia, microbiologia, micologia, análises clinicas com recursos e
+              equipamentos de ponta.
             </p>
             <a href="#content" class="scroll-down"><i class="fas fa-long-arrow-alt-down"></i></a>
           </div><!-- /.col-xl-8 -->
@@ -190,8 +190,8 @@
             <div class="col-sm-12 col-md-12 col-lg-12">
               <ul class="social-icons list-unstyled">
                 <li><a href="tel:558436165000"><i class="fa-solid fa-phone"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://www.instagram.com/hemolab_rn/"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/hemolabrn"><i class="fab fa-facebook-f"></i></a></li>
               </ul><!-- /.social-icons -->
             </div>
           </div><!-- /.row -->
