--- a/unidades.html
+++ b/unidades.html
@@ -85,7 +85,9 @@
               <img class="mt--20 w-65" src="assets/images/page-titles/unidades.png">
             </div>
             <h1 class="pagetitle__heading">Unidades</h1>
-            <p class="pagetitle__desc mb-30">Encontre aqui o Hemolab mais próximo de você.
+            <p class="pagetitle__desc mb-30">Tem sempre um Hemolab perto de você!
+              O Hemolab conta com unidades completas, com o melhor atendimento, espalhadas por toda
+              Natal e Grande Natal.
             </p>
             <a href="#content" class="scroll-down"><i class="fas fa-long-arrow-alt-down"></i></a>
           </div><!-- /.col-xl-8 -->
@@ -468,8 +470,8 @@
         <div class="col-sm-12 col-md-12 col-lg-12">
           <ul class="social-icons list-unstyled">
             <li><a href="tel:558436165000"><i class="fa-solid fa-phone"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="https://www.instagram.com/hemolab_rn/"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com/hemolabrn"><i class="fab fa-facebook-f"></i></a></li>
           </ul><!-- /.social-icons -->
         </div>
       </div><!-- /.row -->
