--- a/index.html
+++ b/index.html
@@ -227,10 +227,9 @@
       </div><!-- /.row -->
       <div class="row">
         <div class="col-md-12 col-lg-6 offset-lg-3 text-center">
-          <p class="font-weight-bold mb-0">Servir a comunidade melhorando a qualidade de vida através de uma saúde
-            melhor. Colocamos protocolos para proteger nossos pacientes e funcionários, enquanto continuamos a
-            fornecer os cuidados médicos necessários.
-            <a href="#" class="color-secondary">
+          <p class="font-weight-bold mb-0">Equipamentos de alta tecnologia, atendimento de excelência e confiança nos
+            resultados!
+            <a href="https://wa.me/558436165001" class="color-secondary">
               <span>Entre em contato</span> <i class="icon-arrow-right"></i>
             </a>
           </p>
@@ -578,8 +577,8 @@
         <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
           <div class="heading text-center mb-40">
             <h3 class="heading__title">Certificados</h3>
-            <p class="heading__desc">Somos o único laboratório do Rio Grande do Norte certificado pelo Sistema
-              Nacional de Acreditação da Sociedade Brasileira de Análises Clínicas.
+            <p class="heading__desc">O laboratório pioneiro do Rio Grande do Norte certificado pelo Sistema Nacional de
+              Acreditação da Sociedade Brasileira de Análises Clínicas.
             </p>
           </div><!-- /.heading -->
         </div><!-- /.col-lg-6 -->
@@ -810,8 +809,8 @@
           <div class="col-sm-12 col-md-12 col-lg-12">
             <ul class="social-icons list-unstyled">
               <li><a href="tel:558436165000"><i class="fa-solid fa-phone"></i></a></li>
-              <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-              <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="https://www.instagram.com/hemolab_rn/"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="https://www.facebook.com/hemolabrn"><i class="fab fa-facebook-f"></i></a></li>
             </ul><!-- /.social-icons -->
           </div>
         </div><!-- /.row -->
