Alteração do rodapé e adição de texto em exames.

--- a/exames.html
+++ b/exames.html
@@ -103,6 +103,12 @@
             <div class="mb-50">
               <h5>Listagem de exames</h5>
             </div>
+            <div>
+              <p style="margin-bottom: 55px; font-size: 16px;">
+                Caso não encontre o exame que está buscando, entre em contato conosco através do nosso <a
+                  href="https://wa.me/558436165001" target="_blank">WhatsApp</a>.
+              </p>
+            </div>
             <div class="accordion-item">
               <div class="accordion__header" data-toggle="collapse" data-target="#collapse1" aria-expanded="false">
                 <a class="accordion__title" href="#">HEMOGRAMA</a>
@@ -664,8 +670,9 @@
           </div><!-- /.row -->
           <div class="row ml-0 col-lg-8 col-sm-12">
             <div class="descricao-footer">
-              <p>O Hemolab dispõe de serviços de diagnose nas mais diversas áreas como biologia molecular, citogenética,
-                teste de paternidade, exames de DNA, sexagem fetal, morfologia de medula óssea, painéis exemplo.</p>
+              <p>O Hemolab, dispõe de serviços de diagnose nas mais diversas áreas como biologia molecular, hematologia,
+                imuno-hematologia, citometria de fluxo, bioquímica, imunologia, hormônios, urinálises, parasitologia,
+                microbiologia, micologia, análises clinicas com recursos e equipamentos de ponta.</p>
             </div>
           </div>
           <div class="row mt-40 ml-0">
