--- a/unidades.html
+++ b/unidades.html
@@ -462,8 +462,9 @@
       </div><!-- /.row -->
       <div class="row ml-0 col-lg-8 col-sm-12">
         <div class="descricao-footer">
-          <p>O Hemolab dispõe de serviços de diagnose nas mais diversas áreas como biologia molecular, citogenética,
-            teste de paternidade, exames de DNA, sexagem fetal, morfologia de medula óssea, painéis exemplo.</p>
+          <p>O Hemolab, dispõe de serviços de diagnose nas mais diversas áreas como biologia molecular, hematologia,
+            imuno-hematologia, citometria de fluxo, bioquímica, imunologia, hormônios, urinálises, parasitologia,
+            microbiologia, micologia, análises clinicas com recursos e equipamentos de ponta.</p>
         </div>
       </div>
       <div class="row mt-40 ml-0">
