adição de link políticas de privacidade no footer

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -256,7 +256,7 @@
           <nav class="cookies-privacidade">
             <ul class="list-unstyled footer__copyright-links d-flex flex-wrap justify-content-end mb-0">
               <li class="mr-50"><a href="#">Cookies</a></li>
-              <li><a href="#">Políticas de Privacidade</a></li>
+              <li><a href="politicas_privacidade.html">Políticas de Privacidade</a></li>
             </ul>
           </nav>
         </div><!-- /.col-lg-6 -->
