--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
     ============================== -->
   <section class="slider">
     <div class="slick-carousel m-slides-0"
-      data-slick='{"slidesToShow": 1, "autoplay": true, "autoplaySpeed": 2000, "arrows": true,"dots": false, "speed": 700,"fade": true,"cssEase": "linear", "responsive": [ {"breakpoint": 1300, "settings": {"arrows": true}}, {"breakpoint": 992, "settings": {"arrows": false}}]}'>
+      data-slick='{"slidesToShow": 1, "autoplay": true, "autoplaySpeed": 2000, "arrows": true,"dots": false, "speed": 700,"fade": true,"cssEase": "linear", "responsive": [ {"breakpoint": 1371, "settings": {"arrows": true}}, {"breakpoint": 1370, "settings": {"arrows": false}}]}'>
       <div class="slide-item align-v-h">
-        <div class="bg-img"><img src="assets/images/sliders/2.jpg" alt="slide img"></div>
+        <div class="bg-img"><img src="assets/images/sliders/12.jpg" alt="slide img"></div>
         <div class="container">
           <div class="row align-items-center">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5">
@@ -99,17 +99,38 @@
         </div><!-- /.container -->
       </div><!-- /.slide-item -->
       <div class="slide-item align-v-h">
-        <div class="bg-img"><img src="assets/images/sliders/3.jpg" alt="slide img"></div>
+        <div class="bg-img"><img src="assets/images/sliders/11.jpg" alt="slide img"></div>
         <div class="container">
           <div class="row align-items-center">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
               <div class="slide__content">
-                <h2 class="slide__title">Confiança é tudo</h2>
-                <p class="slide__desc">The health and well-being of our patients and their health care team will
-                  always be our priority, so we follow the best practices for cleanliness.</p>
+                <h2 class="slide__title">Proteja sua família!</h2>
+                <p class="slide__desc"> O Hemolab vacinas possui um espaço completo especializado em vacinação para
+                  todas as fases da vida, da fase infantil até a melhor idade.</p>
                 <div class="d-flex flex-wrap align-items-center">
                   <a href="servicos.html" class="btn btn__primary btn__rounded mr-30 btn__slider">
                     <span>Saiba mais</span>
+                  </a>
+                </div>
+              </div><!-- /.slide-content -->
+            </div><!-- /.col-xl-7 -->
+          </div><!-- /.row -->
+        </div><!-- /.container -->
+      </div><!-- /.slide-item -->
+      <div class="slide-item align-v-h">
+        <div class="bg-img"><img src="assets/images/sliders/13.jpg" alt="slide img"></div>
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5">
+              <div class="slide__content">
+                <h2 class="slide__title">Baixe o novo app Hemolab</h2>
+                <p class="slide__desc">
+                  Acesso os resultados dos exames, encontre a unidade mais próxima e muito mais.
+                </p>
+                <div class="d-flex flex-wrap align-items-center">
+                  <a href="https://play.google.com/store/apps/details?id=br.com.nd.hemolab.app" target="_blank"
+                    class="btn btn__primary btn__rounded mr-30 btn__slider">
+                    <span>Acessar agora</span>
                   </a>
                 </div>
               </div><!-- /.slide-content -->
