Acaboou (eu acho)

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="slick-carousel m-slides-0"
       data-slick='{"slidesToShow": 1, "autoplay": true, "autoplaySpeed": 2000, "arrows": true,"dots": false, "speed": 700,"fade": true,"cssEase": "linear", "responsive": [ {"breakpoint": 1371, "settings": {"arrows": true}}, {"breakpoint": 1370, "settings": {"arrows": false}}]}'>
       <div class="slide-item align-v-h">
-        <div class="bg-img"><img src="assets/images/sliders/12.jpg" alt="slide img"></div>
+        <div class="bg-img"><img src="assets/images/sliders/3.png" alt="slide img"></div>
         <div class="container">
           <div class="row align-items-center">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5">
@@ -99,7 +99,7 @@
         </div><!-- /.container -->
       </div><!-- /.slide-item -->
       <div class="slide-item align-v-h">
-        <div class="bg-img"><img src="assets/images/sliders/11.jpg" alt="slide img"></div>
+        <div class="bg-img"><img src="assets/images/sliders/1.jpg" alt="slide img"></div>
         <div class="container">
           <div class="row align-items-center">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
@@ -118,14 +118,15 @@
         </div><!-- /.container -->
       </div><!-- /.slide-item -->
       <div class="slide-item align-v-h">
-        <div class="bg-img"><img src="assets/images/sliders/13.jpg" alt="slide img"></div>
+        <div class="bg-img"><img src="assets/images/sliders/2.png" alt="slide img"></div>
         <div class="container">
           <div class="row align-items-center">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5">
               <div class="slide__content">
-                <h2 class="slide__title">Baixe o novo app Hemolab</h2>
+                <h2 class="slide__title">Coleta domiciliar e empresarial</h2>
                 <p class="slide__desc">
-                  Acesso os resultados dos exames, encontre a unidade mais próxima e muito mais.
+                  Exames laboratoriais onde você estiver, realizado por profissionais especializados em coletas adultas
+                  e infantis com toda a qualidade que você já conhece.
                 </p>
                 <div class="d-flex flex-wrap align-items-center">
                   <a href="https://play.google.com/store/apps/details?id=br.com.nd.hemolab.app" target="_blank"
