--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
             <h3 class="heading__title mb-40">O Hemolab.</h3>
           </div>
           <div class="about__Text">
-            <p class="mb-30">Sempre pautado em princípios éticos e composto por uma equipe de profissionais altamente
-              capacitados, investe maciçamente na excelência de métodos através da participação de programa de
+            <p class="mb-30">Sempre pautado em princípios éticos e composto por uma equipe de profissionais
+              capacitados, investe na excelência de métodos através da participação de programa de
               qualidade nacional, de educação continuada e do emprego de tecnologia de automação nos seus processos
               analíticos.
             </p>
@@ -771,6 +771,9 @@
               <img src="assets/images/convenios/hapvida.png" alt="hapvida convênio img">
             </div>
             <div class="img-convenio">
+              <img src="assets/images/convenios/Unimed.png" alt="Unimed convênio img">
+            </div>
+            <div class="img-convenio">
               <img src="assets/images/convenios/Humana.png" alt="Humana convênio img">
             </div>
             <div class="img-convenio">
@@ -793,9 +796,6 @@
             </div>
             <div class="img-convenio">
               <img src="assets/images/convenios/Sulamerica.png" alt="Sulamerica convênio img">
-            </div>
-            <div class="img-convenio">
-              <img src="assets/images/convenios/Unimed.png" alt="Unimed convênio img">
             </div>
             <div class="img-convenio">
               <img src="assets/images/convenios/Vitallis.png" alt="Vitallis convênio img">
