Erros de digitação

--- a/exames.html
+++ b/exames.html
@@ -399,7 +399,7 @@
             </div><!-- /.accordion-item -->
             <div class="accordion-item">
               <div class="accordion__header" data-toggle="collapse" data-target="#collapse21">
-                <a class="accordion__title" href="#">ARASITOLÓGICO DE FEZES COM MIF</a>
+                <a class="accordion__title" href="#">PARASITOLÓGICO DE FEZES COM MIF</a>
               </div><!-- /.accordion-item-header -->
               <div id="collapse21" class="collapse" data-parent="#accordion">
                 <div class="accordion__body">
@@ -534,7 +534,7 @@
                     <strong>Orientações:</strong> Jejum não obrigatório, pacientes em uso de anticoagulantes como
                     enoxaparina (clexane), heparina (liquemine), varfarina(marevan) não devem fazer o exame, a coleta
                     deverá ser realizada a partir da 8° semana de gestação. <br>
-                    <strong>Entrega:</strong> Em até 08 dias úteis.
+                    <strong>Entrega:</strong> Em até 05 dias úteis.
                   </p>
                 </div><!-- /.accordion-item-body -->
               </div>
